objects/ssot__Employee__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AlternateEmail__c</fullName>
        <label>Alternate Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeNumber__c</fullName>
        <label>Employee Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeStatusBeginDateTime__c</fullName>
        <label>Employee Status Begin Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeStatusEndDateTime__c</fullName>
        <label>Employee Status End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeStatus__c</fullName>
        <label>Employee Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeType__c</fullName>
        <label>Employee Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentScheduleType__c</fullName>
        <label>Employment Schedule Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employee Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727355347254_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee_IndividualId_map_Individual_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Employee_IndividualId_map_Individual_rel</relationshipLabel>
        <relationshipName>rel_1727355347254_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>